parser_grammar.txt
program = extern* func_def*
func_def = DEF IDENTIFIER param_list ARROW block END
param_list = IDENTIFIER*
block = expr*
extern = EXTERN IDENTIFIER param_list SEMICOLON

var_expr = IDENTIFIER
num_literal = NUMBER

expr = expr3 | if_expr | loop_expr | var_init_expr
expr3 = expr2 [ASSIGN expr3]
expr2 = expr1 (LT expr1)*
expr1 = expr0 (MINUS expr0)*
expr0 = num_literal | var_expr

if_expr = IF expr THEN block ELSE block END

# basic loop construct that loops along numbered range with start, end, and increment
loop_expr = LOOP IDENTIFIER RANGE expr COMMA expr COMMA expr ARROW block END

var_init_expr = VAR IDENTIFIER ASSIGN expr
